--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
             <section id="getALL">
                 <h3>Get all free book</h3>
                 <p>Verb:</p><span> GET</span><br>
-                <p>Path:</p><span> /getAllFree</span><br>
+                <p>Path:</p><span> <a href="https://freebooksws.herokuapp.com/getAllFree" target="_blanc">
+				https://freebooksws.herokuapp.com/getAllFree</a></span><br>
                 <p>Description:</p><span> You will get list of all the books.</span>
             </section>
             <article>
@@ -66,7 +67,8 @@
             <section id="byName">
                 <h3>Get free books by name</h3>
                 <p>Verb:</p><span> POST</span><br>
-                <p>Path:</p><span> /getFreeBooksByName </span><br>
+                <p>Path:</p><span> <a href="https://freebooksws.herokuapp.com/getFreeBooksByName" target="_blanc">
+				https://freebooksws.herokuapp.com/getFreeBooksByName</a> </span><br>
                 <p>Description:</p><span> your value should be book_name and the key is one of the books from list.<br></span><br>
                 <button>Books list</button><br><br>
                 <div id="bookList"><h3>Books name list:</h3><br>
@@ -106,7 +108,8 @@
             <section id="byDate">
                 <h3>Get free books by dates</h3>
                 <p>Verb:</p><span> POST</span><br>
-                <p>Path:</p><span> /getFreeBooksByDates </span><br>
+                <p>Path:</p><span><a href="https://freebooksws.herokuapp.com/getFreeBooksByDates" target="_blanc">
+				https://freebooksws.herokuapp.com/getFreeBooksByDates</a> </span><br>
                 <p>Description:</p><span> you need to send 2 values, the first will be startDate and the second will be lastDate.<br>
                         &emsp;&emsp;&emsp;&emsp;all the books are free for only one month !, for exmple: startDate: March lastDate:April .</span>
             </section>
