--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>Amazon Free Books</title>
-        <link rel="stylesheet" href="include/style.css">
+        <link rel="stylesheet" href="public/style.css">
         <link href="https://fonts.googleapis.com/css?family=Indie+Flower|Love+Ya+Like+A+Sister" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Courgette" rel="stylesheet">    
         <link href="https://fonts.googleapis.com/css?family=Neuton" rel="stylesheet">
@@ -110,8 +110,9 @@
                 <p>Verb:</p><span> POST</span><br>
                 <p>Path:</p><span><a href="https://freebooksws.herokuapp.com/getFreeBooksByDates" target="_blanc">
 				https://freebooksws.herokuapp.com/getFreeBooksByDates</a> </span><br>
-                <p>Description:</p><span> you need to send 2 values, the first will be startDate and the second will be lastDate.<br>
-                        &emsp;&emsp;&emsp;&emsp;all the books are free for only one month !, for exmple: startDate: March lastDate:April .</span>
+                <p>Description:</p><span> You need to send 2 values, the first will be startDate and the second will be lastDate.<br>
+                        &emsp;&emsp;&emsp;&emsp;&emsp;All the books are free for only one month !<br> 
+                        &emsp;&emsp;&emsp;&emsp;&emsp;Exmple: startDate: March, lastDate:April .</span>
             </section>
             <article>
                 <p>
